[project]
name = "arrow-scorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.47.0",
    "streamlit-authenticator>=0.4.2",
    "psycopg[binary]",                # PostgreSQL driver
    "pymysql",                        # MariaDB/MySQL driver
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
